fix: replace List.getFirst() in EyeService for Java compatibility